Finished Splash Screen Finished Onboarding Screen Finished Select Language Screen Added Custom Fonts Added Shared Preferences Class

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,3 +1,10 @@
 {
-
+  "pushYourLimits": "Push Your Limits",
+  "recordYourPersonalBest" : "Record Your Personal Best",
+  "letsDoIt" : "Let's Do It",
+  "selectLanguage" : "Choose Your Language",
+  "arabic" : "Arabic",
+  "english" : "English",
+  "useLanguageEasily" : "Select your preferred Language to use Team AR easily",
+  "continue" : "Continue"
 }
