--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,22 +1,40 @@
 {
   "appName": "Team AR",
   "pushYourLimits": "Push Your Limits",
-  "recordYourPersonalBest" : "Record Your Personal Best",
-  "letsDoIt" : "Let's Do It",
-  "selectLanguage" : "Choose Your Language",
-  "arabic" : "Arabic",
-  "english" : "English",
-  "useLanguageEasily" : "Select your preferred Language to use Team AR easily",
-  "continue" : "Continue",
+  "recordYourPersonalBest": "Record Your Personal Best",
+  "letsDoIt": "Let's Do It",
+  "selectLanguage": "Choose Your Language",
+  "arabic": "Arabic",
+  "english": "English",
+  "useLanguageEasily": "Select your preferred Language to use Team AR easily",
+  "continue": "Continue",
   "login": "Login",
   "signupTo": "Signup To ",
   "welcomeBack": "Welcome Back!",
-  "in" : "in",
-  "userName" : "User Name",
-  "password" : "Password",
-  "enterYourCredentials" : "Please enter your credentials to login",
-  "thisFieldIsRequired" : "Field can't be empty",
-  "forgotPassword" : "Forgot Password?",
-  "dontHaveAnAccount" : "Don't have an account?",
-  "signup" : "Signup"
+  "in": "in",
+  "userName": "User Name",
+  "password": "Password",
+  "enterYourCredentials": "Please enter your credentials to login",
+  "thisFieldIsRequired": "Field can't be empty",
+  "forgotPassword": "Forgot Password?",
+  "dontHaveAnAccount": "Don't have an account?",
+  "signup": "Signup",
+  "error.request_cancelled": "Request to API server was cancelled",
+  "error.connection_timeout": "Connection timeout with API server",
+  "error.send_timeout": "Send timeout in connection with API server",
+  "error.receive_timeout": "Receive timeout in connection with API server",
+  "error.bad_certificate": "Bad certificate",
+  "error.bad_response": "Bad response from server",
+  "error.connection_error": "Connection error",
+  "error.unknown_error": "Unknown error",
+  "error.unexpected": "Unexpected error",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "loginError": "Login Error",
+  "email" : "Email",
+  "plans": "Plans",
+  "normal": "Normal",
+  "subscribe": "Subscribe",
+  "le": "LE"
+
 }
