Finished Confirm Subscription Register Screen Ui

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -9,16 +9,16 @@
   "useLanguageEasily": "اختر لغتك المفضلة لاستخدام تطبيق Team AR بسهولة.",
   "continue": "استمر",
   "login": "تسجيل الدخول",
-  "signupTo" : "انشاء حساب جديد",
+  "signupTo": "انشاء حساب جديد",
   "welcomeBack": "مرحبا بعودتك!",
-  "in" : "في",
-  "userName" : "اسم المستخدم",
-  "password" : "كلمة المرور",
-  "enterYourCredentials" : "ادخل بياناتك لتسجيل الدخول",
-  "thisFieldIsRequired" : "هذا الحقل مطلوب",
-  "forgotPassword" : "هل نسيت كلمة المرور؟",
-  "dontHaveAnAccount" : "ليس لديك حساب؟",
-  "signup" : "انشاء حساب",
+  "in": "في",
+  "userName": "اسم المستخدم",
+  "password": "كلمة المرور",
+  "enterYourCredentials": "ادخل بياناتك لتسجيل الدخول",
+  "thisFieldIsRequired": "هذا الحقل مطلوب",
+  "forgotPassword": "هل نسيت كلمة المرور؟",
+  "dontHaveAnAccount": "ليس لديك حساب؟",
+  "signup": "انشاء حساب",
   "error.request_cancelled": "تم إلغاء الطلب إلى خادم API",
   "error.connection_timeout": "انتهت مهلة الاتصال مع خادم API",
   "error.send_timeout": "انتهت مهلة الإرسال في الاتصال بخادم API",
@@ -35,8 +35,30 @@
   "plans": "الباقات",
   "normal": "العادية",
   "subscribe": "اشتراك",
-  "le": "ج.م"
-
-
+  "le": "ج.م",
+  "confirmSubscription": "تأكيد الاشتراك",
+  "enterYourInfo": "ادخل البيانات المطلوبة",
+  "forSubscription": "للاشتراك في الباقة",
+  "name": "الاسم",
+  "phone": "الهاتف",
+  "age": "السن",
+  "height": "الطول",
+  "weight": "الوزن",
+  "gender": "النوع",
+  "male": "ذكر",
+  "female": "انثى",
+  "subscriptionGoal": "الهدف من الاشتراك",
+  "preferredFood": "الطعام المفضل",
+  "unPreferredFood": "الطعام غير المفضل",
+  "lastTimeTrained": "اخر مرة تتدربت فيها",
+  "numberOfDaysForTraining": "عدد ايام التمرين",
+  "haveAnyPain": "هل لديك اي مشاكل صحية؟",
+  "aboutYourWork": "ماهي طبيعة عملك",
+  "allergyOfFood": "هل لديك حساسية من طعام معين؟",
+  "Are You Smoking?": "هل أنت مدخن؟",
+  "Please Confirm You Send Your Body Images On WhatsApp": "يرجى تأكيد أنك أرسلت صور جسمك على واتساب",
+  "Next": "التالي",
+  "Address": "العنوان",
+  "Have You Ever Had An Infection?": "هل أصبت بعدوى من قبل؟"
 
 }
