--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -59,7 +59,31 @@
   "Please Confirm You Send Your Body Images On WhatsApp": "Please Confirm You Send Your Body Images On WhatsApp",
   "Next": "Next",
   "Address": "Address",
-  "Have You Ever Had An Infection?": "Have You Ever Had An Infection?"
+  "Have You Ever Had An Infection?": "Have You Ever Had An Infection?",
+  "Register": "Register",
+  "Confirm Password": "Confirm Password",
+  "Create Your Account": "Create Your Account",
+  "Register Error": "Register Error",
+  "Home": "Home",
+  "Trainee": "Trainee",
+  "Trainer": "Trainer",
+  "User": "User",
+  "Time": "Time",
+  "Add.Trainee": "Add Trainee",
+  "Add": "Add",
+  "No New Trainees": "No New Trainees",
+  "Manage Plans": "Manage Plans",
+  "Manage your plans and add new ones": "Manage your plans and add new ones",
+  "Subscribed Users": "Subscribed Users",
+  "See all": "See all",
+  "Manage Foods": "Manage Foods",
+  "Track and organize meal plans with ease.": "Track and organize meal plans with ease.",
+  "See Details": "See Details",
+  "Admin Panel": "Admin Panel",
+  "Status": "Status",
+  "Search By Name": "Search By Name",
+  "Language": "Language"
+
 
 
 }
