Finished Fcm notification

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -79,10 +79,93 @@
   "Manage Foods": "إدارة الأغذية",
   "Track and organize meal plans with ease.": "تتبع ونظم الوجبات بسهولة",
   "See Details": "عرض التفاصيل",
-  "Admin Panel": "ادارة الادمن",
+  "Admin Panel": "لوحة التحكم",
   "Status": "الحالة",
   "Search By Name": "البحث بالاسم",
-  "Language": "اللغة"
-
-
+  "Logout": "تسجيل الخروج",
+  "Language": "اللغة",
+  "Edit": "تعديل",
+  "Edit Plan": "تعديل الخطة",
+  "Add Plan": "إضافة خطة",
+  "Plan Name": "اسم الخطة",
+  "Price Before Discount": "السعر قبل الخصم",
+  "Price After Discount": "السعر بعد الخصم",
+  "VIP": "مميز",
+  "Save": "حفظ",
+  "Plan Type": "نوع الخطة",
+  "Duration": "المدة",
+  "Months": "شهور",
+  "Carbs": "كرب",
+  "Calories": "سعرات حرارية",
+  "Proteins": "بروتينات",
+  "Fats": "دهون",
+  "Image not available": "الصورة غير متوفرة",
+  "Add Meal": "إضافة وجبة",
+  "Number Of Carbs in 1(g)": "عدد الكربوهيدرات في 1(غ)",
+  "Number Of Proteins in 1(g)": "عدد البروتينات في 1(غ)",
+  "Number Of Fat in 1(g)": "عدد الدهون في 1(غ)",
+  "Number Of Calories in 1(g)": "عدد السعرات في 1(غ)",
+  "Files": "الملفات",
+  "Become the best trainer in the world": "كن أفضل مدرب في العالم",
+  "DIET": "نظام غذائي",
+  "Training": "تدريب",
+  "Tips And Guides": "نصائح وإرشادات",
+  "You are on your journey": " استمر في رحلتك",
+  "Your Diet Plan": "خطتك الغذائية",
+  "Account": "الحساب",
+  "General": "عام",
+  "Welcome": "مرحباً",
+  "Change Password": "تغيير كلمة المرور",
+  "Notifications": "الإشعارات",
+  "Number Of Meals": "عدد الوجبات",
+  "Aim Of Join": "هدف الانضمام",
+  "What You Want In Diet": "ما تريده في النظام الغذائي",
+  "First Meal": "الوجبة الأولى",
+  "Second Meal": "الوجبة الثانية",
+  "Third Meal": "الوجبة الثالثة",
+  "Fourth Meal": "الوجبة الرابعة",
+  "Fifth Meal": "الوجبة الخامسة",
+  "Sixth Meal": "الوجبة السادسة",
+  "No diet plan found": "لم يتم العثور على خطة غذائية",
+  "Gram": "جرام",
+  "Sets": "مجموعات",
+  "Reps": "تكرارات",
+  "Rest Time": "وقت الراحة",
+  "Note": "ملاحظة",
+  "Total Requests": "إجمالي الطلبات",
+  "Food System": "النظام الغذائي",
+  "Subscribed": "مشترك",
+  "Create Workout System": "إنشاء نظام تمرين",
+  "Workout System Name": "اسم نظام التمرين",
+  "Vegetables": "خضروات",
+  "Select Meal Type": "اختر نوع الوجبة",
+  "Add New User": "إضافة مستخدم جديد",
+  "Select Pdf": "اختر ملف PDF",
+  "Select Meals": "اختر الوجبات",
+  "Trainee Profile": "ملف المتدرب",
+  "Plan": "الخطة",
+  "Users Management": "إدارة المستخدمين",
+  "Users About To Expire": "مستخدمون على وشك الانتهاء",
+  "Progress": "التقدم",
+  "No Users Found": "لم يتم العثور على مستخدمين",
+  "Success": "نجاح",
+  "Register Successfully": "تم التسجيل بنجاح",
+  "Register New Trainer": "تسجيل مدرب جديد",
+  "Read Only": "للقراءة فقط",
+  "Copied to clipboard": "تم النسخ إلى الحافظة",
+  "Share to WhatsApp": "مشاركة على واتساب",
+  "New": "جديد",
+  "Please Select Image": "يرجى اختيار صورة",
+  "Workout Systems": "أنظمة التمارين",
+  "No Results Founds": "لا توجد نتائج",
+  "Active": "نشط",
+  "Expired": "منتهي",
+  "Add Workout": "إضافة تمرين",
+  "Select Workout": "اختر تمرين",
+  "Failed to load workouts": "فشل تحميل التمارين",
+  "No Workouts Found": "لم يتم العثور على تمارين",
+  "Workouts": "التمارين",
+  "Manage User Meals": "إدارة وجبات المستخدم",
+  "Replace": "استبدال",
+  "Must be alphanumeric": "يجب ان يكون حروف وارقام فقط"
 }
