--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -82,8 +82,90 @@
   "Admin Panel": "Admin Panel",
   "Status": "Status",
   "Search By Name": "Search By Name",
-  "Language": "Language"
-
-
-
+  "Logout": "Logout",
+  "Language": "Language",
+  "Edit": "Edit",
+  "Edit Plan": "Edit Plan",
+  "Add Plan": "Add Plan",
+  "Plan Name": "Plan Name",
+  "Price Before Discount": "Price Before Discount",
+  "Price After Discount": "Price After Discount",
+  "VIP": "VIP",
+  "Save": "Save",
+  "Plan Type": "Plan Type",
+  "Duration": "Duration",
+  "Months": "Months",
+  "Carbs": "Carbs",
+  "Calories": "Calories",
+  "Proteins": "Proteins",
+  "Fats": "Fats",
+  "Image not available": "Image not available",
+  "Add Meal": "Add Meal",
+  "Number Of Carbs in 1(g)": "Number Of Carbs in 1(g)",
+  "Number Of Proteins in 1(g)": "Number Of Proteins in 1(g)",
+  "Number Of Fat in 1(g)": "Number Of Fat in 1(g)",
+  "Number Of Calories in 1(g)": "Number Of Calories in 1(g)",
+  "Files": "Files",
+  "Become the best trainer in the world": "Become the best trainer in the world",
+  "DIET": "DIET",
+  "Training": "Training",
+  "Tips And Guides": "Tips And Guides",
+  "You are on your journey": "You are on your journey",
+  "Your Diet Plan": "Your Diet Plan",
+  "Account": "Account",
+  "General": "General",
+  "Welcome": "Welcome",
+  "Change Password": "Change Password",
+  "Notifications": "Notifications",
+  "Number Of Meals": "Number Of Meals",
+  "Aim Of Join": "Aim Of Join",
+  "What You Want In Diet": "What You Want In Diet",
+  "First Meal": "First Meal",
+  "Second Meal": "Second Meal",
+  "Third Meal": "Third Meal",
+  "Fourth Meal": "Fourth Meal",
+  "Fifth Meal": "Fifth Meal",
+  "Sixth Meal": "Sixth Meal",
+  "No diet plan found": "No diet Meals found",
+  "Gram": "Gram",
+  "Sets": "Sets",
+  "Reps": "Reps",
+  "Rest Time": "Rest Time",
+  "Note": "Note",
+  "Total Requests": "Total Requests",
+  "Food System": "Food System",
+  "Subscribed": "Subscribed",
+  "Create Workout System": "Create Workout System",
+  "Workout System Name": "Workout System Name",
+  "Vegetables": "Vegetables",
+  "Select Meal Type": "Select Meal Type",
+  "Add New User": "Add New User",
+  "Select Pdf": "Select Pdf",
+  "Select Meals": "Select Meals",
+  "Trainee Profile": "Trainee Profile",
+  "Plan": "Plan",
+  "Users Management": "Users Management",
+  "Users About To Expire": "Users About To Expire",
+  "Progress": "Progress",
+  "No Users Found": "No Users Found",
+  "Success": "Success",
+  "Register Successfully": "Register Successfully",
+  "Register New Trainer": "Register New Trainer",
+  "Read Only": "Read Only",
+  "Copied to clipboard": "Copied to clipboard",
+  "Share to WhatsApp": "Share to WhatsApp",
+  "New": "New",
+  "Please Select Image": "Please Select Image",
+  "Workout Systems": "Workout Systems",
+  "No Results Founds": "No Results Found",
+  "Active": "Active",
+  "Expired": "Expired",
+  "Add Workout": "Add Workout",
+  "Select Workout": "Select Workout",
+  "Failed to load workouts": "Failed to load workouts",
+  "No Workouts Found": "No Workouts Found",
+  "Workouts": "Workouts",
+  "Manage User Meals": "Manage User Meals",
+  "Replace": "Replace",
+  "Must be alphanumeric" : "Must be letters and numbers only"
 }
