Implment caching system , bug fixes

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -168,6 +168,60 @@
   "Manage User Meals": "إدارة وجبات المستخدم",
   "Replace": "استبدال",
   "Must be alphanumeric": "يجب ان يكون حروف وارقام فقط",
-  "No meals found" : "لم يتم العثور على وجبات",
-  "Chats" : "الدردشات"
+  "No meals found": "لم يتم العثور على وجبات",
+  "Chats": "الدردشات",
+  "markAllAsRead": "تحديد الكل كمقروء",
+  "testNotifications": "اختبار الإشعارات",
+  "settings": "الإعدادات",
+  "clearAll": "مسح الكل",
+  "all": "الكل",
+  "unread": "غير مقروءة",
+  "subscriptions": "اشتراكات",
+  "workouts": "تمارين",
+  "searchNotifications": "البحث في الإشعارات...",
+  "system": "نظام",
+  "subscription": "اشتراك",
+  "workout": "تمرين",
+  "offers": "عروض",
+  "errorLoadingNotifications": "حدث خطأ في تحميل الإشعارات",
+  "retry": "إعادة المحاولة",
+  "noNotifications": "لا توجد إشعارات",
+  "notificationsWillAppearHere": "سيتم عرض إشعاراتك هنا عند وصولها",
+  "update": "تحديث",
+  "sendTestNotification": "إرسال إشعار تجريبي",
+  "deleteNotification": "حذف الإشعار",
+  "confirmDeleteNotification": "هل أنت متأكد من حذف هذا الإشعار؟",
+  "delete": "حذف",
+  "notificationDeleted": "تم حذف الإشعار",
+  "clearAllNotifications": "مسح جميع الإشعارات",
+  "confirmClearAllNotifications": "هل أنت متأكد من مسح جميع الإشعارات؟ لا يمكن التراجع عن هذا الإجراء.",
+  "allNotificationsCleared": "تم مسح جميع الإشعارات",
+  "date": "التاريخ",
+  "type": "النوع",
+  "close": "إغلاق",
+  "bookingConfirmation": "تأكيد حجز",
+  "paymentConfirmation": "تأكيد دفع",
+  "newContent": "محتوى جديد",
+  "maintenance": "صيانة",
+  "workoutPlan": "خطة تمرين",
+  "trainerEvaluation": "تقييم مدرب",
+  "bookingCancellation": "إلغاء حجز",
+  "motivational": "تحفيزي",
+  "newMember": "عضو جديد",
+  "bookingRequest": "طلب حجز",
+  "newReview": "مراجعة جديدة",
+  "technicalIssue": "مشكلة تقنية",
+  "joined": "انضم في",
+  "daysLeft": "أيام متبقية",
+  "dayLeft": "يوم متبقي",
+  "expired": "منتهي الصلاحية",
+  "subscriptionExpired": "انتهى الاشتراك",
+  "daysRemaining": "متبقية",
+  "justNow": "منذ لحظات",
+  "minuteAgo": "منذ دقيقة واحدة",
+  "minutesAgo": "دقائق",
+  "hourAgo": "منذ ساعة واحدة",
+  "hoursAgo": "ساعات",
+  "dayAgo": "منذ يوم واحد",
+  "daysAgo": "أيام"
 }
