--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -167,8 +167,62 @@
   "Workouts": "Workouts",
   "Manage User Meals": "Manage User Meals",
   "Replace": "Replace",
-  "Must be alphanumeric" : "Must be letters and numbers only",
-  "No meals found" : "No meals found.!",
-  "Chats" : "Chats"
-
+  "Must be alphanumeric": "Must be letters and numbers only",
+  "No meals found": "No meals found.!",
+  "Chats": "Chats",
+  "markAllAsRead": "Mark All as Read",
+  "testNotifications": "Test Notifications",
+  "settings": "Settings",
+  "clearAll": "Clear All",
+  "all": "All",
+  "unread": "Unread",
+  "subscriptions": "Subscriptions",
+  "workouts": "Workouts",
+  "searchNotifications": "Search Notifications...",
+  "system": "System",
+  "subscription": "Subscription",
+  "workout": "Workout",
+  "offers": "Offers",
+  "errorLoadingNotifications": "Error loading notifications",
+  "retry": "Retry",
+  "noNotifications": "No Notifications",
+  "notificationsWillAppearHere": "Your notifications will appear here when they arrive",
+  "update": "Update",
+  "sendTestNotification": "Send Test Notification",
+  "deleteNotification": "Delete Notification",
+  "confirmDeleteNotification": "Are you sure you want to delete this notification?",
+  "delete": "Delete",
+  "notificationDeleted": "Notification deleted",
+  "clearAllNotifications": "Clear All Notifications",
+  "confirmClearAllNotifications": "Are you sure you want to clear all notifications? This action cannot be undone.",
+  "allNotificationsCleared": "All notifications cleared",
+  "date": "Date",
+  "type": "Type",
+  "close": "Close",
+  "markAsRead": "Mark as Read",
+  "bookingConfirmation": "Booking Confirmation",
+  "paymentConfirmation": "Payment Confirmation",
+  "newContent": "New Content",
+  "maintenance": "Maintenance",
+  "workoutPlan": "Workout Plan",
+  "trainerEvaluation": "Trainer Evaluation",
+  "bookingCancellation": "Booking Cancellation",
+  "motivational": "Motivational",
+  "newMember": "New Member",
+  "bookingRequest": "Booking Request",
+  "newReview": "New Review",
+  "technicalIssue": "Technical Issue",
+  "joined": "Joined",
+  "daysLeft": "Days Left",
+  "dayLeft": "Day Left",
+  "expired": "Expired",
+  "subscriptionExpired": "Subscription Expired",
+  "daysRemaining": "Remaining",
+  "justNow": "Just now",
+  "minuteAgo": "1 minute ago",
+  "minutesAgo": "minutes ago",
+  "hourAgo": "1 hour ago",
+  "hoursAgo": "hours ago",
+  "dayAgo": "1 day ago",
+  "daysAgo": "days ago"
 }
