update select meals

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -97,6 +97,7 @@
     "Months": "شهور",
     "Carbs": "Carbs",
     "Calories": "Calories",
+    "Total Daily Calories": "إجمالي السعرات اليومية",
     "Proteins": "Proteins",
     "Fats": "Fats",
     "Image not available": "الصورة غير متوفرة",
