--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -97,6 +97,7 @@
   "Months": "Months",
   "Carbs": "Carbs",
   "Calories": "Calories",
+  "Total Daily Calories": "Total Daily Calories",
   "Proteins": "Proteins",
   "Fats": "Fats",
   "Image not available": "Image not available",
@@ -189,9 +190,9 @@
   "notificationsWillAppearHere": "Your notifications will appear here when they arrive",
   "update": "Update",
   "sendTestNotification": "Send Test Notification",
-  "deleteNotification": "Delete Notification",
-  "confirmDeleteNotification": "Are you sure you want to delete this notification?",
   "delete": "Delete",
+  "deleteMealTitle": "Delete Meal",
+  "deleteMealMessage": "Are you sure you want to delete this meal? This action cannot be undone.",
   "notificationDeleted": "Notification deleted",
   "clearAllNotifications": "Clear All Notifications",
   "confirmClearAllNotifications": "Are you sure you want to clear all notifications? This action cannot be undone.",
