--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -193,6 +193,12 @@
     "deleteNotification": "حذف الإشعار",
     "confirmDeleteNotification": "هل أنت متأكد من حذف هذا الإشعار؟",
     "delete": "حذف",
+    "deleteAccount": "حذف الحساب",
+    "deleteAccountTitle": "حذف الحساب",
+    "deleteAccountMessage": "هل أنت متأكد من رغبتك في حذف حسابك؟ لا يمكن التراجع عن هذا الإجراء.",
+    "confirmDelete": "حذف",
+    "deleteAccountSuccess": "تم حذف الحساب بنجاح",
+    "deleteAccountError": "فشل حذف الحساب",
     "notificationDeleted": "تم حذف الإشعار",
     "clearAllNotifications": "مسح جميع الإشعارات",
     "confirmClearAllNotifications": "هل أنت متأكد من مسح جميع الإشعارات؟ لا يمكن التراجع عن هذا الإجراء.",
