--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -193,6 +193,12 @@
   "delete": "Delete",
   "deleteMealTitle": "Delete Meal",
   "deleteMealMessage": "Are you sure you want to delete this meal? This action cannot be undone.",
+  "deleteAccount": "Delete Account",
+  "deleteAccountTitle": "Delete account",
+  "deleteAccountMessage": "Are you sure you want to delete your account? This action cannot be undone.",
+  "confirmDelete": "Delete",
+  "deleteAccountSuccess": "Account deleted successfully",
+  "deleteAccountError": "Failed to delete account",
   "notificationDeleted": "Notification deleted",
   "clearAllNotifications": "Clear All Notifications",
   "confirmClearAllNotifications": "Are you sure you want to clear all notifications? This action cannot be undone.",
